hphp/hack/test/typecheck/const_collections_are_const.php.exp
File "const_collections_are_const.php", line 8, characters 5-13:
You cannot use this syntax on the left-hand side of an assignment. (Parsing[1002])
